2003-03-09 (THH):
  * Fixed TOS patching routine - it was only working on big endian machines
    (Thanks to Tony Smolar for the hint!).
  * IKBD_Cmd_ReadClock() should now work.

2003-03-08 (THH):
  * Some parts of the code accessed the SR directly to read the IPL - however
    the UAE CPU core only updates the SR when doing a MakeSR() first. So this
    is done in the affected code parts now, too.
  * The IPL wasn't raised when a MFP interrupt occured - fixed now.
  * Full screen resolution for ST-Low can now be selected from the screen
    setup dialog.

2003-03-04 (THH):
  * The IKBD emulation does not longer duplicate joystick fire buttons when
    a game (like Babarian) tries to use both, joystick and mouse => Games like
    Lotus Turbo Esprit Challange are now working again!
  * Improved audio timer function - the code should now be a little bit faster.

2003-03-03 (THH):
  * Resynced Hatari's UAE CPU core with UAE 0.8.22 - this fixes some bugs in
    68k instructions like ABCD and SBCD.
  * Now only reinitializing the sound subsystem if really needed, this should
    fix a problem with Linux ALSA sound driver (Thanks to Tony Smolar for
    discovering this problem!).
  * Added another patch for TOS 2.05 so that this TOS version should now work
    with Hatari, too.

2003-02-28 (THH):
  * Rewrote TOS patching routine. It is more flexible now.
  * Removed 0xa0ff opcode for VDI resolutions; using GEMDOS_OPCODE now instead.

2003-02-02 (THH):
  * Fixed MMU RAM size configuration bug.
  * Rewrote some screen conversion functions in C (low320x8.c, low640x8.c,
    med640x8.c and spec640x16.c).

2003-01-29 (THH):
  * When a bus or address error occurred, the PC was often not set to the
    right exception handler routine. This has been fixed now - thanks to
    Philippe Gerin for finding the bug and the patch for solving it!

2002-12-30 (THH):  *** Version 0.25 ***
  * Added some more bus error entries in intercept.c (just like on a real ST).