@@ -1,3 +1,6 @@
+2003-03-10 (THH):
+  * Adjusted audio functions so that Hatari's sound should be right again.
+
 2003-03-09 (THH):
   * Fixed TOS patching routine - it was only working on big endian machines
     (Thanks to Tony Smolar for the hint!).
